vendored_parsers/tree-sitter-glimmer/test/corpus/block_statement.txt
==================
If Statement
==================
{{#if condition}}
  Content!
{{/if}}
---

(template
  (block_statement
    (block_statement_start
      path: (identifier)
      argument: (identifier))
    program: (text_node)
    (block_statement_end
      path: (identifier))))

==================
Each Statement
==================
{{#each array as |item index|}}
  {{item}}
  {{index}}
{{/each}}
---

(template
  (block_statement
    (block_statement_start
      path: (identifier)
      argument: (identifier)
      (block_params
        (identifier)
        (identifier)))
    program: (text_node)
    program: (mustache_statement
      (identifier))
    program: (text_node)
    program: (mustache_statement
      (identifier))
    program: (text_node)
    (block_statement_end
      path: (identifier))))

==================
Consuming Whitespace
==================
{{~#if condition~}}
  Content!
{{~/if~}}
---

(template
  (block_statement
    (block_statement_start
      path: (identifier)
      argument: (identifier))
    program: (text_node)
    (block_statement_end
      path: (identifier))))
