vendored_parsers/tree-sitter-glimmer/test/corpus/glimmer_components.txt
==================
Block Params
==================
<MyCoolComponent as |foo bar|>
  {{foo}}
  {{bar}}
</MyCoolComponent>
---

(template
  (element_node
    (element_node_start
      (tag_name)
      (block_params
        (identifier)
        (identifier)))
    (text_node)
    (mustache_statement
        (identifier))
    (text_node)
    (mustache_statement
        (identifier))
    (text_node)
    (element_node_end
      (tag_name))))

==================
Modifiers
==================
<div {{on 'click' this.whatever}}></div>
---

(template
  (element_node
    (element_node_start
      (tag_name)
      (mustache_statement
        (helper_invocation
          helper: (identifier)
          argument: (string_literal)
          argument: (path_expression
            (identifier)
            (identifier)))))
    (element_node_end
      (tag_name))))
