vendored_parsers/tree-sitter-glimmer/test/corpus/handlebars.txt
==================
Variable Access
==================
{{someVariable.nestedProperty.anotherNestedProperty}}
---

(template
  (mustache_statement
    (path_expression
      (identifier)
      (identifier)
      (identifier))))

==================
Helper Invocation
==================
{{some-helper argument key=value}}
---

(template
  (mustache_statement
    (helper_invocation
      helper: (identifier)
      argument: (identifier)
      (hash_pair
        key: (identifier)
        value: (identifier)))))

==================
Sub Expressions
==================
{{eq (add 1 2) 3}}
---

(template
  (mustache_statement
    (helper_invocation
      helper: (identifier)
      argument: (sub_expression
        (helper_invocation
          helper: (identifier)
          argument: (number_literal)
          argument: (number_literal)))
      argument: (number_literal))))

==================
Consuming Whitespace
==================
{{~ someValue ~}}
---

(template
  (mustache_statement
    (identifier)))
